--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <p>Colour</p>
                         <select name="size">
                             <option value="S">Colour</option>
-                            <option value="Balck" selected>Balck</option>
+                            <option value="Black" selected>Black</option>
                             <option value="White">White</option>
                             <option value="Green">Green</option>
                             <option value="Blue">Blue</option>
@@ -68,7 +68,7 @@
                         </select>
                         <select name="size">
                             <option value="S">Colour</option>
-                            <option value="Balck">Balck</option>
+                            <option value="Black">Black</option>
                             <option value="White">White</option>
                             <option value="Green">Green</option>
                             <option value="Blue">Blue</option>
@@ -119,7 +119,7 @@
                         <p>Colour</p>
                         <select name="size">
                             <option value="S">Colour</option>
-                            <option value="Balck" selected>Balck</option>
+                            <option value="Black" selected>Black</option>
                             <option value="White">White</option>
                             <option value="Green">Green</option>
                             <option value="Blue">Blue</option>
@@ -127,7 +127,7 @@
                         </select>
                         <select name="size">
                             <option value="S">Colour</option>
-                            <option value="Balck">Balck</option>
+                            <option value="Black">Black</option>
                             <option value="White">White</option>
                             <option value="Green">Green</option>
                             <option value="Blue">Blue</option>
@@ -175,7 +175,7 @@
                         <p>Colour</p>
                         <select name="size">
                             <option value="S">Colour</option>
-                            <option value="Balck" selected>Balck</option>
+                            <option value="Black" selected>Black</option>
                             <option value="White">White</option>
                             <option value="Green">Green</option>
                             <option value="Blue">Blue</option>
@@ -183,7 +183,7 @@
                         </select>
                         <select name="size">
                             <option value="S">Colour</option>
-                            <option value="Balck">Balck</option>
+                            <option value="Black">Black</option>
                             <option value="White">White</option>
                             <option value="Green">Green</option>
                             <option value="Blue">Blue</option>
